--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <nav class="navbar flex justify-between items-center">
         <div class="logo">
           <img class="menu" src="./images/icon-menu.svg" alt="Menu" />
-          <a href=""><img src="./images/logo.svg" alt="Logo" /></a>
+          <a href="" aria-label="Logo image"
+            ><img src="./images/logo.svg" alt="Logo"
+          /></a>
         </div>
         <ul class="navlist flex-1 flex ml-10">
           <li><a href="">Collections</a></li>
