--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./script.js" defer></script>
   </head>
-  <body>
+  <body class="overlay">
     <!-- Navbar  -->
     <main>
       <nav class="navbar flex justify-between items-center">
