changed tailwind to raw css

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
   <body class="overlay">
     <!-- Navbar  -->
     <main>
-      <nav class="navbar flex justify-between items-center">
+      <nav class="navbar">
         <div class="logo">
           <img class="menu" src="./images/icon-menu.svg" alt="Menu" />
           <a href="" aria-label="Logo image"
             ><img src="./images/logo.svg" alt="Logo"
           /></a>
         </div>
-        <ul class="navlist flex-1 flex ml-10">
+        <ul class="navlist">
           <li><a href="">Collections</a></li>
           <li><a href="">Men</a></li>
           <li><a href="">Women</a></li>
@@ -56,17 +56,17 @@
             />
           </li>
         </ul>
-        <div class="right_panel flex items-center">
+        <div class="right_panel">
           <div class="your_cart">
             <div class="cart-img">
               <img class="cart" src="./images/icon-cart.svg" alt="Cart" />
-              <span class="prod_no flex justify-center items-center">1</span>
+              <span class="prod_no">1</span>
             </div>
             <div class="cart_down">
               <h2>Cart</h2>
-              <div class="cart_prods flex justify-center items-center pt-5">
+              <div class="cart_prods">
                 <span class="empty"> Your cart is empty</span>
-                <div class="prod flex items-center gap-x-3">
+                <div class="prod">
                   <img
                     src="./images/image-product-1-thumbnail.jpg"
                     alt="added product"
@@ -90,12 +90,12 @@
           <img class="user" src="./images/image-avatar.png" alt="User" />
         </div>
       </nav>
-      <section class="product_section flex gap-x-5 p-20 mx-auto">
-        <div class="product basis-1/2 flex flex-col items-center p-5">
+      <section class="product_section">
+        <div class="product">
           <div class="anim1 current">
             <img src="./images/image-product-1.jpg" alt="" />
           </div>
-          <div class="anim1 images flex justify-center gap-x-5">
+          <div class="anim1 images">
             <img
               class="active"
               src="./images/image-product-1.jpg"
@@ -106,22 +106,22 @@
             <img src="./images/image-product-4.jpg" alt="img-4" />
           </div>
         </div>
-        <div class="about basis-1/2 flex flex-col justify-center">
+        <div class="about">
           <h3 class="anim2 brand">SNEAKER COMPANY</h3>
-          <h1 class="anim2 p_name mt-3">Fall Limited Edition Sneakers</h1>
-          <p class="anim2 description mt-5">
+          <h1 class="anim2 p_name">Fall Limited Edition Sneakers</h1>
+          <p class="anim2 description ">
             These low-profile sneakers are your perfect casual wear companion.
             Featuring a durable rubber outer sole, they’ll withstand everything
             the weather can offer.
           </p>
           <div class="anim2 price-wrap">
-            <div class="price flex items-center gap-x-4 mt-4">
+            <div class="price">
               <h1>$125.00</h1>
               <span>50%</span>
             </div>
             <div class="or_price">$250.00</div>
           </div>
-          <div class="anim2 buy flex mt-5 gap-x-3">
+          <div class="anim2 buy">
             <div class="quantity">
               <button class="decre">-</button>
               <label>
@@ -129,7 +129,7 @@
               /></label>
               <button class="incre">+</button>
             </div>
-            <button class="add_to_cart flex items-center gap-x-3">
+            <button class="add_to_cart">
               <svg width="22" height="20" xmlns="http://www.w3.org/2000/svg">
                 <path
                   class="cart"
