changed tailwind to raw css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     ></script>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <!-- TailwindCSS Linked -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="style.css" />
     <script src="./script.js" defer></script>
   </head>
